# puzzle-solver

./: CMakeLists.txt  gcpuzzle.cpp  gcpuzzle.hpp  gcsolver.cpp  gcsolver.hpp  main-cli.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  puzzle.cpp  puzzle.hpp  puzzle_loader.cpp  puzzle_loader.hpp  puzzle_saver.cpp  puzzle_saver.hpp  puzzle_types.hpp  solver.cpp  solver.hpp  sudokupuzzle.cpp  sudokupuzzle.hpp  sudokusettings.cpp  sudokusettings.hpp  sudokusolver.cpp  sudokusolver.hpp
puzzles/: 16x16_sudoku.xpuz  9x15_twin_sudoku.xpuz  9x9_sudoku.xpuz  9x9_sudoku_mix.xpuz  sudoku_mix_362.xpuz
